--- a/recipes/baked-fries.html
+++ b/recipes/baked-fries.html
@@ -3,6 +3,7 @@
     <head>
         <title>Homemade Fries</title>
         <meta charset="UTF-8">
+        <link href="styles.css" rel="stylesheet">
     </head>
 
     <body>
