--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -3,6 +3,7 @@
     <head>
         <title>Jollof Rice</title>
         <meta charset="UTF-8">
+        <link href="styles.css" rel="stylesheet">
     </head>
 
     <body>
