minor styling changes

--- a/recipes/baked-fries.html
+++ b/recipes/baked-fries.html
@@ -33,5 +33,7 @@
             <li>Transfer potatoes to a large bowl. Drizzle with oil; sprinkle with the remaining ingredients. Toss to coat. Arrange in a single layer in two 15x10x1-in. baking pans coated with cooking spray.</li>
             <li> Bake 20-25 minutes or until lightly browned, turning once.</li>
         </ol>
+
+        <a href="../index.html">Back to homepage</a>
     </body>
 </html>
