--- a/recipes/garlic-bread.html
+++ b/recipes/garlic-bread.html
@@ -30,5 +30,7 @@
             <li>In a small bowl, combine butter and garlic. Brush over cut sides of bread; sprinkle with parsley. Place, cut side up, on a baking sheet.</li>
             <li>Bake at 350° for 8 minutes. Broil 4-6 in. from the heat for 2 minutes or until golden brown. Serve warm.</li>
         </ol>
+
+        <a href="../index.html">Back to homepage</a>
     </body>
 </html>
