--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -35,5 +35,7 @@
             <li>Stir in the rice until well mixed, then reduce the heat to low.</li>
             <li>Cover pot and let cook until rice is al dente, about 45 minutes. Check after 30 minutes; if rice is sauce-logged, remove the lid to cook off the excess sauce. If rice seems dry, stir in 1 to 2 cups water. Allow the rice at the bottom of the pot to char a bit to infuse it with a smoky flavor.</li>
         </ol>
+
+        <a href="../index.html">Back to homepage</a>
     </body>
 </html>
